add maven project & life-cycle dependencies